--- a/web/styles/PoissonHeatmap.module.scss
+++ b/web/styles/PoissonHeatmap.module.scss
@@ -1,8 +1,7 @@
-/* components/GameGrid/PDHC/PoissonHeatMap.module.scss */
-
 .chartContainer {
   width: 100%;
-  height: 400px;
+  max-width: 400px;
+  height: auto;
   padding: 20px;
   background-color: #404040; /* Light background for contrast */
   border-radius: 8px;
@@ -17,6 +16,10 @@
 }
 
 @media (max-width: 600px) {
+  .chartContainer {
+    padding: 10px;
+  }
+
   .pdchTitle {
     font-size: 1rem;
   }
