--- a/web/styles/PoissonHeatmap.module.scss
+++ b/web/styles/PoissonHeatmap.module.scss
@@ -39,10 +39,12 @@
     #fff 16%,
     #fff 19%,
     var(--home-jersey-color) 19%,
-    var(--home-jersey-color) 20%,
+    var(--home-jersey-color) 25%,
+    #101010 25%,
     #101010 30%,
     #101010 70%,
-    var(--away-jersey-color) 80%,
+    #101010 75%,
+    var(--away-jersey-color) 75%,
     var(--away-jersey-color) 81%,
     #fff 81%,
     #fff 84%,
@@ -65,6 +67,9 @@
 
 .pdchTitleLogo {
   margin-right: 5px;
+  filter: drop-shadow(
+    var(--divider-color) 0 0 5px
+  ); /* Add a drop shadow to the logo */
 }
 
 .winOddsLabels {
