--- a/web/styles/wigoCharts.module.scss
+++ b/web/styles/wigoCharts.module.scss
@@ -1,48 +1,125 @@
-.parent {
-  display: grid;
-  grid-template-columns: repeat(32, 1fr);
-  grid-template-rows: repeat(24, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
-  height: 80vh;
-  width: 90vw;
-  margin: 0 auto;
-  margin-top: 50px;
+/* styles/wigoCharts.module.scss */
+
+.chartsContainer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 25px;
+  margin-bottom: 25px;
 }
 
-.div1 {
-  grid-area: 1 / 1 / 13 / 9;
-  border: 1px solid #07aae2;
+// WIGO CHART
+
+.wigoChartBorder {
+  background-color: #404040;
+  border-radius: 12px;
+  padding: 15px;
+  height: 85vh;
+  width: 60%;
+  margin: 0 auto;
 }
-.div2 {
-  grid-area: 13 / 1 / 19 / 9;
-  border: 1px solid #07aae2;
+
+.wigoChart {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(35, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  height: 100%;
+  background-color: #202020;
+  border-radius: 12px;
 }
-.div3 {
-  grid-area: 19 / 1 / 25 / 9;
-  border: 1px solid #07aae2;
+
+.nameContainer {
+  grid-area: 1 / 1 / 3 / 7;
+  border-bottom: #404040 3px solid;
+  background-color: #303030;
+  border-radius: 6px 6px 0px 0px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .selectedPlayer {
+    padding: 8px 12px;
+    color: #707070;
+  }
 }
-.div4 {
-  grid-area: 1 / 9 / 13 / 17;
-  border: 1px solid #07aae2;
+
+.pptoiChart {
+  grid-area: 30 / 1 / 36 / 4;
+  border-top: #404040 3px solid;
+  border-right: #404040 3px solid;
 }
-.div5 {
-  grid-area: 13 / 9 / 19 / 17;
-  border: 1px solid #07aae2;
+
+.atoiChart {
+  grid-area: 30 / 4 / 36 / 7;
+  border-top: #404040 3px solid;
 }
-.div6 {
-  grid-area: 19 / 9 / 25 / 17;
-  border: 1px solid #07aae2;
+
+.headshot {
+  grid-area: 3 / 3 / 12 / 5;
+  border-bottom: #404040 3px solid;
+  border-left: #404040 3px solid;
+  border-right: #404040 3px solid;
+
+  .headshotImage {
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 6px;
+    object-fit: cover;
+  }
 }
-.div7 {
-  grid-area: 1 / 17 / 13 / 25;
-  border: 1px solid #07aae2;
+
+.doughnut {
+  grid-area: 12 / 3 / 21 / 5;
+  border-bottom: #404040 3px solid;
+  border-left: #404040 3px solid;
+  border-right: #404040 3px solid;
 }
-.div8 {
-  grid-area: 13 / 17 / 25 / 25;
-  border: 1px solid #07aae2;
+
+.percentiles {
+  grid-area: 21 / 3 / 30 / 5;
+  border-left: #404040 3px solid;
+  border-right: #404040 3px solid;
 }
-.div9 {
-  grid-area: 1 / 25 / 25 / 33;
-  border: 1px solid #07aae2;
+
+.countsTable {
+  grid-area: 3 / 1 / 30 / 3;
+}
+
+.ratesTable {
+  grid-area: 3 / 5 / 30 / 7;
+}
+
+// TRENDS CHART
+
+.trendsChartBorder {
+  background-color: #404040;
+  border-radius: 12px;
+  padding: 15px;
+  height: 85vh;
+  width: 30%;
+  margin: 0 auto;
+}
+
+.trendsChart {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(35, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  height: 100%;
+  background-color: #202020;
+  border-radius: 12px;
+}
+
+.nameSearch {
+  grid-area: 1 / 1 / 3 / 4;
+  background-color: #303030;
+  border-bottom: #404040 3px solid;
+  border-radius: 6px 6px 0px 0px;
+  color: #606060;
+}
+
+.notSureYet {
+  grid-area: 3 / 1 / 36 / 4;
 }
