--- a/web/components/WiGO/NameSearchBar.module.scss
+++ b/web/components/WiGO/NameSearchBar.module.scss
@@ -14,6 +14,7 @@
   background-color: #303030;
   border-radius: 6px 6px 0px 0px;
   color: #707070;
+  font-family: roboto condensed, sans-serif;
 }
 
 .searchInput:focus {
