--- a/web/styles/wigoCharts.module.scss
+++ b/web/styles/wigoCharts.module.scss
@@ -20,7 +20,7 @@
 
 .wigoChart {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(35, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
@@ -30,13 +30,16 @@
 }
 
 .nameContainer {
-  grid-area: 1 / 1 / 3 / 7;
+  grid-area: 1 / 1 / 3 / 9;
   border-bottom: #404040 3px solid;
   background-color: #303030;
   border-radius: 6px 6px 0px 0px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  color: #707070;
+  padding: 0 12px;
+  font-family: roboto condensed, sans-serif;
 
   .selectedPlayerName {
     padding: 8px 12px;
@@ -46,25 +49,61 @@
 }
 
 .pptoiChart {
-  grid-area: 30 / 1 / 36 / 4;
+  grid-area: 30 / 1 / 36 / 5;
   border-top: #404040 3px solid;
   border-right: #404040 3px solid;
 }
 
 .atoiChart {
-  grid-area: 30 / 4 / 36 / 7;
+  grid-area: 30 / 5 / 36 / 9;
   border-top: #404040 3px solid;
 }
 
 .headshotContainer {
-  grid-area: 3 / 3 / 12 / 5;
+  grid-area: 3 / 4 / 12 / 6;
   border-bottom: #404040 3px solid;
   border-left: #404040 3px solid;
   border-right: #404040 3px solid;
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  background-color: #303030;
+
+  background: linear-gradient(
+    135deg,
+    var(--primary-color) 0%,
+    var(--primary-color) 7%,
+    var(--secondary-color) 7%,
+    var(--secondary-color) 10%,
+    var(--primary-color) 10%,
+    var(--primary-color) 13%,
+    var(--accent-color) 13%,
+    var(--accent-color) 16%,
+
+    #fff 16%,
+    #fff 19%,
+    var(--jersey-color) 19%,
+    var(--jersey-color) 25%,
+    var(--primary-color) 25%,
+    var(--primary-color) 30%,
+    var(--secondary-color) 30%,
+    var(--secondary-color) 70%,
+    var(--primary-color) 70%,
+    var(--primary-color) 75%,
+
+    var(--jersey-color) 75%,
+    var(--jersey-color) 81%,
+    #fff 81%,
+    #fff 84%,
+
+    var(--accent-color) 84%,
+    var(--accent-color) 87%,
+    var(--primary-color) 87%,
+    var(--primary-color) 90%,
+    var(--secondary-color) 90%,
+    var(--secondary-color) 93%,
+    var(--primary-color) 93%,
+    var(--primary-color) 100%
+  );
 }
 
 .headshot {
@@ -73,34 +112,38 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 75%; // Set a specific width for the container
+  width: 80%; // Set a specific width for the container
   height: 100%; // Set a specific height for the container
+  // filter: drop-shadow(0px 0px 10px var(--secondary-color));
 }
 
 .headshotImage {
-  border-radius: 6px;
+  border: var(--accent-color) 6px solid !important;
+  border-radius: 90px;
   object-fit: cover; // Ensures the image fills the container proportionally
+  background-color: var(--primary-color);
+  width: 90%;
 }
 
 .doughnut {
-  grid-area: 12 / 3 / 21 / 5;
+  grid-area: 12 / 4 / 21 / 8;
   border-bottom: #404040 3px solid;
   border-left: #404040 3px solid;
   border-right: #404040 3px solid;
 }
 
 .percentiles {
-  grid-area: 21 / 3 / 30 / 5;
+  grid-area: 21 / 4 / 30 / 8;
   border-left: #404040 3px solid;
   border-right: #404040 3px solid;
 }
 
 .countsTable {
-  grid-area: 3 / 1 / 30 / 3;
+  grid-area: 3 / 1 / 30 / 4;
 }
 
 .ratesTable {
-  grid-area: 3 / 5 / 30 / 7;
+  grid-area: 3 / 6 / 30 / 9;
 }
 
 // TRENDS CHART
@@ -135,4 +178,44 @@
 
 .notSureYet {
   grid-area: 3 / 1 / 36 / 4;
+}
+
+// COUNTS AND RATES TABLES
+
+.countsTable,
+.ratesTable {
+  overflow: auto; /* Allow scrolling if content overflows */
+
+  table {
+    width: 100%;
+    height: 100%;
+    border-collapse: collapse; /* Merge borders for a cleaner look */
+
+    th,
+    td {
+      border: 1px solid #ffffff; /* White borders */
+      padding: 4px 6px;
+      text-align: center;
+      color: #ffffff; /* White text for better contrast */
+      font-family: "Roboto Condensed", sans-serif;
+      font-size: 12px;
+    }
+
+    th {
+      background-color: #303030; /* Dark background for headers */
+    }
+
+    td:first-child {
+      text-align: left; /* Align the first column to the left */
+      width: 20%;
+    }
+
+    tr:nth-child(even) {
+      background-color: #404040; /* Slightly lighter for even rows */
+    }
+
+    tr:nth-child(odd) {
+      background-color: #303030; /* Darker for odd rows */
+    }
+  }
 }
