--- a/web/components/GameGrid/Toggle/Toggle.module.css
+++ b/web/components/GameGrid/Toggle/Toggle.module.css
@@ -18,7 +18,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #07aae2;
+  background-color: #0c92bf;
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
