--- a/web/components/SustainabilityVSCareerChart/SustainabilityVSCareerChart.module.scss
+++ b/web/components/SustainabilityVSCareerChart/SustainabilityVSCareerChart.module.scss
@@ -26,7 +26,7 @@
       .label {
         font-size: 0.625rem;
         text-align: center;
-        3px;
+        padding: 3px;
       }
       .careerAveragesStat,
       .sustainabilityStat {
