--- a/web/components/GameGrid/GameGrid.module.scss
+++ b/web/components/GameGrid/GameGrid.module.scss
@@ -116,9 +116,9 @@ $mobile-fixed-width: 35px;
   position: relative;
   height: 35px;
   width: 115px;
-  background: #40bee8;
+  background: #2086a8;
   color: #ffffff;
-  border: 2px solid white;
+  border: 1px solid rgb(204, 204, 204);
   padding-left: 20px;
   padding-right: 20px;
   border-radius: 8px;
@@ -136,7 +136,7 @@ $mobile-fixed-width: 35px;
   width: 115px;
   background: #2086a8;
   color: #ffffff;
-  border: 2px solid white;
+  border: 1px solid white;
   padding-left: 20px;
   padding-right: 20px;
   border-radius: 8px;
@@ -155,7 +155,7 @@ $mobile-fixed-width: 35px;
   width: 115px;
   background: #2086a8;
   color: #ffffff;
-  border: 2px solid white;
+  border: 1px solid white;
   padding-left: 20px;
   padding-right: 20px;
   border-radius: 8px;
@@ -168,7 +168,7 @@ $mobile-fixed-width: 35px;
   width: 115px;
   background: #2086a8;
   color: #ffffff;
-  border: 2px solid white;
+  border: 1px solid white;
   padding-left: 20px;
   padding-right: 20px;
   border-radius: 8px;
